# cobra

./: .gitignore  LICENSE  README.md  pyproject.toml
cobra/conf/: datasets.py  models.py
cobra/models/: load.py  materialize.py  registry.py
cobra/models/backbones/llm/: __init__.py  base_llm.py  mamba.py
cobra/models/backbones/llm/prompting/: __init__.py  mamba_prompter.py  zephyr_prompter.py
cobra/models/backbones/vision/: base_vision.py  clip_vit.py  dinoclip_vit.py  dinosiglip_vit.py  dinov2_vit.py  in1k_vit.py  siglip_vit.py
cobra/models/mamba/: configuration_mamba.py  modeling_mamba.py
cobra/models/vlms/: __init__.py  base_vlm.py  cobra.py
cobra/preprocessing/: download.py  materialize.py
cobra/preprocessing/datasets/: datasets.py
cobra/training/: materialize.py  metrics.py
cobra/training/strategies/: base_strategy.py  ddp.py  fsdp.py
cobra/util/: nn_utils.py
scripts/: generate.py  preprocess.py  pretrain.py
scripts/additional-datasets/: lvis_instruct_4v.py
